--- a/Front App/package.json
+++ b/Front App/package.json
@@ -8,6 +8,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
+        "axios": "^1.4.0",
         "bootstrap": "^5.3.0",
         "firebase": "^9.23.0",
         "js-cookie": "^3.0.5",
